--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,6 @@
     font-size: 25px;
     padding: 14px 16px;
     text-decoration: none;
-    margin-top: 20px;
   }
   #return{
     color: white;
@@ -105,6 +104,13 @@
     padding: 14px 16px;
     text-decoration: none;
     margin-top: 20px;
+  }
+  #rights{
+    color: white;
+    font-size: 25px;
+  }
+  #backtotop{
+    color:orangered;
   }
 
   
