--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,19 @@
   body {
     background-image: url("Images/pinterest1.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
-    
+    background-size:cover;
+    background-position: center center;
+    height: fit-content;
+    overflow: hidden;
+
   }
  
-  .container {
+ 
+  /* .container {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-  }
+  } */
   
   ul.navbar {
     list-style-type: none;
@@ -72,22 +76,22 @@
   .helping_hands {
     background-image: url("Images/hands.png");
     background-repeat: no-repeat;
-    height: 20vh;
+    height: vh;
     width: 80vw;
     background-position: right;
     background-size: contain;
   }
+  .footer{
+    margin-top: 830px;
+  }
   
   ul.footer {
-    padding: 20px;
-    margin-top: auto;
     list-style-type: none;
     display: flex;
     gap: 100px;
     background-color: rgba(0, 0, 255, 0.434);
     border-radius: 30px;
     overflow: hidden;
-
   }
   ul.footer li a{
     display: block;
