--- a/styles.css
+++ b/styles.css
@@ -8,19 +8,11 @@
     overflow: hidden;
 
   }
- 
- 
-  /* .container {
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-  } */
-  
   ul.navbar {
     list-style-type: none;
     display: flex;
     gap: 100px;
-    background-color: rgba(0, 0, 255, 0.434);
+    background-color:rgb(112, 112, 214);
     border-radius: 30px;
     overflow: hidden;
   }
@@ -89,7 +81,7 @@
     list-style-type: none;
     display: flex;
     gap: 100px;
-    background-color: rgba(0, 0, 255, 0.434);
+    background-color:rgb(112, 112, 214);
     border-radius: 30px;
     overflow: hidden;
   }
