--- a/contact us/contact.css
+++ b/contact us/contact.css
@@ -15,7 +15,10 @@
 	max-width:500px;
 	width:95%;
 	margin:0 auto;
-	position:relative;
+	position: relative;
+  background-color: aqua;
+  margin-left: 150px;
+
 	
 
 	
@@ -126,3 +129,38 @@ ul.navbar {
     margin-top: 20px;
   }
   
+  .footer{
+    margin-top: 30px;
+  }
+  
+  ul.footer {
+    list-style-type: none;
+    display: flex;
+    gap: 100px;
+    background-color:rgb(234, 26, 102);
+    border-radius: 30px;
+    overflow: hidden;
+  }
+  ul.footer li a{
+    display: block;
+    color: white;
+    text-align: center;
+    font-size: 25px;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  #return{
+    color: white;
+    text-align: center;
+    font-size: 25px;
+    padding: 14px 16px;
+    text-decoration: none;
+    margin-top: 20px;
+  }
+  #rights{
+    color: white;
+    font-size: 25px;
+  }
+  #backtotop{
+    color:orangered;
+  }
