--- a/signup.Assets/signin.css
+++ b/signup.Assets/signin.css
@@ -9,16 +9,17 @@ body{
 
 }
 form{
-	border: 1px solid #99bbff;
-	padding: 40px;
+	border: 1px solid #946a84;
+	padding: 50px;
+
 	
 
 }
 .login_box, .signup_box{
 	background-color: rgba(0,0,0,0.55);
 	position: absolute;
-	top:50%;
-	left:70%;
+	top:40%;
+	left:30%;
 	transform: translate(-50%, -46%);
 	padding-top: 10px;
     padding-bottom: 20px;
@@ -148,6 +149,41 @@ ul.navbar {
     cursor: pointer;
     margin-right: 30px;
     margin-top: 20px;
+  }
+  .footer{
+    margin-top: 790px;
+padding: 20px;  }
+  
+  ul.footer {
+    list-style-type: none;
+    display: flex;
+    gap: 100px;
+    background-color:rgb(112, 112, 214);
+    border-radius: 30px;
+    overflow: hidden;
+  }
+  ul.footer li a{
+    display: block;
+    color: white;
+    text-align: center;
+    font-size: 25px;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  #return{
+    color: white;
+    text-align: center;
+    font-size: 25px;
+    padding: 14px 16px;
+    text-decoration: none;
+    margin-top: 20px;
+  }
+  #rights{
+    color: white;
+    font-size: 25px;
+  }
+  #backtotop{
+    color:orangered;
   }
 
 
