--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Set minimum height to 100% of viewport height */
+  margin: 0; /* Reset default margin */
+  background-image: url("Images/pinterest1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  overflow: hidden;
+}
 
-  body {
-    background-image: url("Images/pinterest1.jpg");
-    background-repeat: no-repeat;
-    background-size:cover;
-    background-position: center center;
-    height: fit-content;
-    overflow: hidden;
-
-  }
+.container {
+  flex: 1; /* Allow container to grow and fill available space */
+}
   ul.navbar {
     list-style-type: none;
     display: flex;
@@ -75,7 +80,7 @@
   }
 
   #donateButton {
-    background-color: blue;
+    background-color: rgb(237, 118, 205);
     color: white;
     border: none;
     border-radius: 20px;
@@ -85,7 +90,7 @@
     gap: 30px;
 }
 #donateButton2 {
-  background-color: blue;
+  background-color: rgb(237, 118, 205);
   color: white;
   border: aliceblue;
   margin-left: 50px;
@@ -95,21 +100,22 @@
   font-size: 20px;
   cursor: pointer;
 }
+footer {
+  list-style-type: none;
+  display: flex;
+  text-align: center;
+  padding: 0px;
+  gap: 100px;
+  background-color:rgb(32, 32, 235);
+  border-radius: 30px;
+  overflow: hidden;
 
 
-
-
-
-
-  .footer{
-    margin-top: 830px;
-  }
-  
+}
   ul.footer {
     list-style-type: none;
     display: flex;
     gap: 100px;
-    background-color:rgb(112, 112, 214);
     border-radius: 30px;
     overflow: hidden;
   }
